--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "webpack": "^2.1.0-beta.27"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jerfletcher/hubTm.git"
   }
 }
