Added site and minify options to package.json config. Maybe should eventually be command line, but this seems good, too.

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/jerfletcher/hubTm.git"
+  },
+  "config": {
+    "site": "today",
+    "minify": false
   }
 }
