--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
+    "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.27"
   },
   "repository": {
