--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "html-loader": "^0.4.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.27"
+    "webpack": "^2.2.0-rc.2"
   },
   "repository": {
     "type": "git",
